working on Web Interface

--- a/PriceTrackerWebInterface/src/app/footer/footer.component.html
+++ b/PriceTrackerWebInterface/src/app/footer/footer.component.html
@@ -1,5 +1,16 @@
-<footer class="site-footer">
+<footer>
   <div class="container">
-    <p>&copy; 2025 My Website. All rights reserved.</p>
+    <p>
+      &copy; 2025 Мониторинг цен на товары интернет-магазинов.
+    </p>
+    <p>
+      Данный сервис отслеживания цен не является официальным
+      представителем, партнёром или филиалом каких-либо магазинов,
+      упомянутых в приложении. Вся информация предоставляется
+      "как есть" и носит исключительно информационный характер.
+      Администрация сервиса не несёт ответственности за актуальность
+      цен, наличие товаров и возможные последствия использования данных
+      сервиса.
+    </p>
   </div>
 </footer>
