--- a/PriceTrackerWebInterface/src/app/header/header.component.html
+++ b/PriceTrackerWebInterface/src/app/header/header.component.html
@@ -1,10 +1,10 @@
+<div class="top-border-line"></div>
 <header class="site-header">
   <div class="container">
-    <h1>My Website</h1>
+    <h1>Трекер цен магазинов</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="{{mainPageUrl}}">Главная</a>
+      <a href="#">О сайте</a>
     </nav>
   </div>
 </header>
