--- a/PriceTrackerWebInterface/src/app/layout/layout.component.html
+++ b/PriceTrackerWebInterface/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
 
-<main class="site-main">
-  <router-outlet></router-outlet>
-</main>
+  <app-header class="gamma-normal"></app-header>
 
-<app-footer></app-footer>
+  <main class="site-main">
+    <router-outlet></router-outlet>
+  </main>
+<app-footer class="gamma-light"></app-footer>
