angular update to v20 finished

--- a/PriceTrackerWebInterface/src/app/merch-price-history-page/merch-price-history-page.component.html
+++ b/PriceTrackerWebInterface/src/app/merch-price-history-page/merch-price-history-page.component.html
@@ -1,9 +1,11 @@
 <div>
   hmmm... jj
   {{ rteee }}
-  <div *ngIf="product!=null">
-    heh
-    {{ product.name}}
-    {{ product }}
-  </div >
+  @if (product!=null) {
+    <div>
+      heh
+      {{ product.name}}
+      {{ product }}
+    </div >
+  }
 </div>
