--- a/PriceTrackerWebInterface/src/app/layout/layout.component.html
+++ b/PriceTrackerWebInterface/src/app/layout/layout.component.html
@@ -1,5 +1,5 @@
 
-  <app-header class="gamma-normal"></app-header>
+  <app-header class="gamma-dark"></app-header>
 
   <main class="site-main">
     <router-outlet></router-outlet>
