--- a/PriceTrackerWebInterface/src/styles.css
+++ b/PriceTrackerWebInterface/src/styles.css
@@ -10,8 +10,8 @@
 }
 
 .gamma-dark {
+  background-color: #3BA3FF;
 }
 
-body{
-    margin:0;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
