--- a/PriceTrackerWebInterface/src/app/header/header.component.css
+++ b/PriceTrackerWebInterface/src/app/header/header.component.css
@@ -5,10 +5,16 @@
 
 
 h1 {
-  color: #87A5BF;
+  color: white;
   position: relative;
   text-align: left;
   margin: 1rem;
+  margin-left: 5rem;
+  margin-top: 2.5rem;
+  text-shadow: -1px -1px 0 black,
+      1px -1px 0 black,
+      -1px 1px 0 black,
+      1px 1px 0 black;
 }
 
 .top-border-line {
@@ -20,10 +26,32 @@ h1 {
 
 }
 
-nav{
-    margin: 1rem;
+
+nav {
+  margin: 1rem 1rem 0 5rem;
+  align-content: flex-start;
+  display: flex;
 }
 
-a{
-    margin: 1rem;
+a {
+    padding: 0.4rem 5rem 0 5rem;
+  margin: 0 0.1rem 0 0.1rem;
+  border-top-left-radius: 0.2rem;
+  border-top-right-radius: 0.2rem;
+  color: white;
+  text-decoration: none;
+  border: black solid 0.1rem;
+  border-bottom: none;
+  background-color: #326FA6;
 }
+
+  a:hover {
+    color: #326FA6;
+    background-color: white;
+    text-decoration: none;
+  }
+
+  a:active {
+    color: #326FA6;
+    background-color: white;
+  }
