merch upsertion to repository seemingly got optimized (not quite tested yet though)

--- a/PriceTrackerWebInterface/src/app/footer/footer.component.html
+++ b/PriceTrackerWebInterface/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
       упомянутых в приложении. Вся информация предоставляется
       "как есть" и носит исключительно информационный характер.
       Администрация сервиса не несёт ответственности за актуальность
-      цен, наличие товаров и возможные последствия использования данных
+      цен, наличие товаров и возможные последствия использования данного
       сервиса.
     </p>
   </div>
