--- a/PriceTrackerWebInterface/src/app/header/header.component.html
+++ b/PriceTrackerWebInterface/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <h1>Трекер цен магазинов</h1>
     <nav>
       <a href="{{mainPageUrl}}">Главная</a>
-      <a href="#">О сайте</a>
+      <a href="{{aboutPageUrl}}">О сайте</a>
     </nav>
   </div>
 </header>
